--- a/containers/Dockerfile.dev
+++ b/containers/Dockerfile.dev
@@ -11,5 +11,7 @@ FROM alpine
 WORKDIR /src
 
 COPY --from=0 /bin/app /bin/app
+COPY --from=0 /src/config/.env /src/config/.env
+COPY --from=0 /src/config/end_points.json /src/config/end_points.json
 
 ENTRYPOINT ["/bin/app"]
